test/features/errors/semantic/e1062_recursion_limit.spl
# E1062: Recursion Limit Exceeded

Feature: E1062 - Recursion Limit Exceeded During Compilation
  As a Simple compiler
  I want to detect when recursion limits are exceeded
  So that infinite type recursion is prevented

  Background:
    Given I have the Simple compiler

  Scenario: Deeply nested types
    When I compile:
      '''
      # Type that causes deep recursion during compilation
      type Nested1 = Nested2
      type Nested2 = Nested3
      type Nested3 = Nested4
      # ... many levels deep
      '''
    Then I should see error E1062
    And the error message should be "recursion limit exceeded during compilation"
    And the label should indicate "recursion limit"
    And the help should suggest "reduce complexity or increase recursion limit"

  Scenario: Valid recursive type
    When I compile:
      '''
      enum List<T>:
        Cons(T, Box<List<T>>)
        Nil
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      type Nested1 = Nested2
      type Nested2 = Nested1
      '''
    Then I should see error E1062
    And the error message should contain "재귀 한도 초과"
